--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,20 @@
-it works !
+<!DOCTYPE html>
+<html lang="en" ng-app="trouverDesTerrains" resizable>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title></title>
+    <!-- inject:css -->
+    <link rel="stylesheet" href="assets/app-3.1.1.css">
+    <!-- endinject -->
+    <!-- inject:js -->
+    <script src="assets/app-3.1.1.js"></script>
+    <!-- endinject -->
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+    <!--  pacifico font-->
+    <link ref="http://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet" type="text/css">
+  </head>
+  <body ng-controller="AppController" ng-cloak>
+    <div layout="row" ui-view="main" class="full-height full-width"></div>
+  </body>
+</html>
